kubernetes/apps/myfpl-api/overlays/production/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myfpl-api-ingress
spec:
  tls:
    - hosts:
        - api.myfpl.live
      secretName: prod-api-myfpl
  rules:
    - host: api.myfpl.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
